--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,8 @@ spring.application.name=university-room-booking
 
 spring.datasource.url=jdbc:mysql://localhost:3306/university_room_booking_db
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
+
+# 1 hour
+jwt.expiration=3600000
