--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=university-room-booking
 
 spring.datasource.url=jdbc:mysql://localhost:3306/university_room_booking_db
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=X3KYDp6#W#aw
 spring.jpa.hibernate.ddl-auto=update
 
 # 1 hour
