--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,10 @@ spring.application.name=university-room-booking
 
 spring.datasource.url=jdbc:mysql://localhost:3306/university_room_booking_db
 spring.datasource.username=root
-spring.datasource.password=X3KYDp6#W#aw
+spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto=update
+
+
 
 # 1 hour
 jwt.expiration=3600000
